# Haskell-IDF-Executable

./: .gitignore  LICENSE.txt  README.md  idf.cabal
app/: GraphViz.hs  PrettyPrint.hs
src/: IDF.hs
src/IDF/: Types.hs
src/IDF/Parser/ByteString/: Char8.hs
test/: Spec.hs
